# SparkSage

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  opencode.json  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  opencode.yml
examples/: build_chunks.py  clean_text.py  convert_files.py  generate_blocks.py  manage_documents.py  serve_api.py
src/sparksage/: __init__.py  config.py
src/sparksage/api/: __init__.py  app.py  documents.py  pipeline.py  schemas.py
src/sparksage/clean/: __init__.py  cleaner.py  registry.py  rules.py
src/sparksage/convert/: __init__.py  backend.py  converter.py
src/sparksage/documents/: __init__.py  keyword_extract.py  markdown_parser.py  schema.py  service.py  store.py
src/sparksage/generator/: __init__.py  client.py  generator.py  prompts.py  schema.py
src/sparksage/schema/: __init__.py  entity.py  enums.py  ideablock.py  source.py  technical.py
tests/: conftest.py  test_api.py  test_clean.py  test_client.py  test_config.py  test_convert.py  test_documents.py  test_generator.py  test_ideablock.py  test_technical.py
